# fire_ground

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/core/: confidence.py  pipeline.py
app/data/: cache.py  osm.py
app/services/: false_positive.py  geocoding.py  heat_source_classifier.py  historical.py
app/utils/: reason_generator.py
static/: map.html
tests/: conftest.py  test_cache.py  test_confidence.py  test_geo_utils.py  test_heat_source_classifier.py  test_reason_generator.py  test_schemas.py
